# Backend

./: .gitignore  DEPLOY.MD  HTTP_STATUS_CODES_FIX.md  PGADMIN_GUIDE.md  PROJECT_STATUS.md  PROJECT_URLS.md  README.md  SWAGGER_FIX.md  TEST_GUIDE.md  build.gradle  docker-compose.yml  prometheus.yml  startup.sh
.claude/: settings.local.json
DB/: docker-compose.yml
crawling-server/: .env.example  CATEGORY_ID_FIX.md  CRAWLING_SERVER_TEST_RESULTS.md  IMPROVEMENTS_SUMMARY.md  SOLUTION_OVERVIEW.md  docker-compose.yml  pyproject.toml
crawling-server/app/: Dockerfile  api.py  auto_scheduler.py  college_crawlers.py  config.py  crud.py  database.py  logging_config.py  main.py  models.py  requirements.txt  schemas.py  tasks.py  url_utils.py
crawling-server/app/middleware/: security.py
crawling-server/migrations/versions/: 0002_add_category_id_to_crawl_notice.py
crawling-server/tests/unit/: test_category_id.py
docs/: API_PERFORMANCE_OPTIMIZATION.md
grafana-provisioning/dashboards/: dashboards.yml
grafana-provisioning/dashboards/json/: Spring Boot 2.1 System Monitor.json
grafana-provisioning/datasources/: datasource.yml
pgadmin/: pgpass  servers.json
src/main/java/com/incheon/notice/config/: RedisConfig.java  SecurityConfig.java  SwaggerConfig.java
src/main/java/com/incheon/notice/controller/: AuthController.java  BookmarkController.java  CategoryController.java  CrawlerController.java  KeywordController.java  (+4 more)
src/main/resources/: application-dev.yml  application-prod.yml  application.yml
src/main/resources/db/migration/: V4__api_restructuring.sql
(+49 files in other folders)
